--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,12 +39,13 @@ nav {
   padding: 10px;
 }
 
+/* Made small change to file access so errors would no longer occur as mentioned on Slack */
 #shop-icon {
-  content: url("/assets/shop-icon.png");
+  content: url("../assets/shop-icon.png");
 }
 
 #cart-icon {
-  content: url("/assets/cart-icon.png");
+  content: url("../assets/cart-icon.png");
 }
 
 /* Custom Element CSS starts here */
